Closed Bug 1695573 Opened 4 years ago Closed 4 years ago

nsXULTooltipListener.cpp:475:18: error: ?MakeScopeExit? was not declared in this scope

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:86.0) Gecko/20100101 Firefox/86.0

Steps to reproduce:

I got following on Solairs:

14:01.05 /builds/psumbera/mozilla-central-build/layout/xul/nsXULTooltipListener.cpp: In member function ?void nsXULTooltipListener::LaunchTooltip()?:
14:01.05 /builds/psumbera/mozilla-central-build/layout/xul/nsXULTooltipListener.cpp:475:18: error: ?MakeScopeExit? was not declared in this scope
14:01.05   475 |   auto cleanup = MakeScopeExit([&] {
14:01.05       |                  ^~~~~~~~~~~~~

The first bad revision is:
changeset: 568972:344a66b3e7ed
user: Emilio Cobos Álvarez <emilio@crisal.io>
date: Fri Feb 26 11:14:25 2021 -0800
description:
Bug 1695122 - Deal with target being null in nsXULTooltipListener and cleanup a bit. r=jaws

Differential Revision: https://phabricator.services.mozilla.com/D106646
Keywords: regression
Regressed by: 1695122
Has Regression Range: --- → yes

The Bugbug bot thinks this bug should belong to the 'Core::Layout' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Layout
Product: Firefox → Core
Assignee: nobody → petr.sumbera

Set release status flags based on info from the regressing bug 1695122

Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/integration/autoland/rev/ec6bd7cf0ea4 Add missing #include for MakeScopeExit. r=glandium DONTBUILD
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: