Bug 1695573 - Add missing #include for MakeScopeExit. r=glandium DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D106753